complete hedear section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
     <header>
-      
+      <nav>
+        <div class="header-section">
+            <div class="logo">
+                <img src="./images/Frame.png" alt="">
+                <h3><span>G</span>amer</h3>
+            </div>
+            <div class="menu-bar">
+                <ul>
+                 <li><a href="">About Us</a></li>
+                 <li><a href="">Developers</a></li>
+                </ul>
+            <div class="follow-btn">
+                <p>Follow Us On</p>
+                <img src="./images/youtube.png" alt="">
+                <img src="./images/tik-tok.svg" alt="">
+            </div>
+            </div>
+         </div>
+      </nav>
     </header>
     <main>
 
