--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
       </nav>
     </header>
     <main>
+        <div class="banner-container">
+            <div class="banner-text">
+                <h3>Play like The</h3>
+                <h2>G.O.A.T.</h2>
+                <p>1-instant play</p>
+                <p>No Download</p>
+                <p>1000s of supported online games</p>
+                <button >SIGN IN</button>
+                <button class="btn-2">GO ROGUE</button>
+            </div>
+            <img class="banner-img" src="./images/Group 18.png" alt="">
+        </div>
 
     </main>
     <footer>
