complete every section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <header>
+        <!--Heading Section-->
+        
       <nav>
         <div class="header-section">
             <div class="logo">
@@ -17,8 +19,8 @@
             </div>
             <div class="menu-bar">
                 <ul>
-                 <li><a href="">About Us</a></li>
-                 <li><a href="">Developers</a></li>
+                 <li><a href="#">About Us</a></li>
+                 <li><a href="#">Developers</a></li>
                 </ul>
             <div class="follow-btn">
                 <p>Follow Us On</p>
@@ -30,22 +32,150 @@
       </nav>
     </header>
     <main>
-        <div class="banner-container">
-            <div class="banner-text">
-                <h3>Play like The</h3>
-                <h2>G.O.A.T.</h2>
-                <p>1-instant play</p>
-                <p>No Download</p>
-                <p>1000s of supported online games</p>
-                <button >SIGN IN</button>
-                <button class="btn-2">GO ROGUE</button>
+
+         <!--Banner-secton-->
+        <section class="banner-section">
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h3>Play like The</h3>
+                    <h2>G.O.A.T.</h2>
+                    <p>1-instant play</p>
+                    <p>No Download</p>
+                    <p>1000s of supported online games</p>
+                    <button >SIGN IN</button>
+                    <button class="btn-2">GO ROGUE</button>
+                </div>
             </div>
-            <img class="banner-img" src="./images/Group 18.png" alt="">
+                <img class="banner-img" src="./images/Group-18.png" alt="">
+        </section>
+
+        <!--online games section-->
+
+        <section class="online-games-section">
+            <div class="online-games-heading">
+                <h1>Online Games <span class="funny-videos">Funny Videos</span></h1>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./images/Rectangle-4.png" alt="">
+                    <p>No Download. No Install. <br>Play games Instantly on Gamers</p>
+                    <div class="overlay"></div>
+                </div>
+                <div class="card">
+                    <img src="./images/Rectangle-5.png" alt="">
+                    <p>Did you Score? #unblockedgames <br>#school</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Rectangle-6.png" alt="">
+                    <p>Breaking games records<br> like OG</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Rectangle-7.png" alt="">
+                    <p>Busted gaming on school laptop,<br> but you are still lit</p>
+                </div>
+            </div>
+        </section>
+
+        <!--Play instantly section-->
+
+        <section class="play-sec">
+            <div class="play-content">
+                <h3> <span>Play Instantly,</span><br> No Downloads<br>No Installs.</h3>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="play-image">
+                <img class="play-big-img" src="./images/Rectangle-55.png" alt="">
+                <div class="play-small-img">
+                    <img src="./images/Rectangle-66.png" alt="">
+                </div>   
+            </div>
+        </section>
+        
+        <!--Games Types Section-->
+
+        <section class="games-types">
+         <div class="games-types-1">
+            <div class="gt-1">
+                <img src="./images/Action-Games.png" alt="">
+                <p class="gt-p">Action Games</p>
+            </div>
+
+            <div class="gt-2">
+                <img src="./images/Adventure-Games.png" alt="">
+                <p class="gt-p">Adventure Games</p>
+            </div>
+
+            <div class="gt-3">
+                <img src="./images/Arcade-Games.png" alt="">
+                <p class="gt-p">Arcade Games</p>
+            </div>
+            <div class="gt-4">
+                <img src="./images/Educational-Games.png" alt="">
+                <p class="gt-p">Educational Games</p>
+            </div>
+            <div class="gt-5">
+                <img src="./images/Role-Games.png" alt="">
+                <p class="gt-p">Word Games</p>
+            </div>
         </div>
-
+        <div class="games-type-2">
+            <div class="gt-6">
+                <img src="./images/Music-Games.png" alt="">
+                <p class="gt-p">Role Palying Games</p>
+            </div>
+            <div class="gt-7">
+                <img src="./images/Puzzle-Games.png" alt="">
+                <p class="gt-p">Music & Audio Games</p>
+            </div>
+            <div class="gt-8">
+                <img src="./images/Strategy-Games.png" alt="">
+                <p class="gt-p">Puzzle Games</p>
+            </div>
+            <div class="gt-9">
+                <img src="./images/Word-Games.png" alt="">
+                <p class="gt-p">Strategy Games</p>
+            </div>
+        </div>
+        </section>
     </main>
-    <footer>
 
+     <!--Footer Section-->
+
+    <footer>
+        <section class="footer-section">
+            <div class="footer-logo">
+                <img src="./images/Frame.png" alt="">
+                <h3><span>G</span><span class="footer-span2" >amer</span></h3>
+            </div>
+            <div class="footer-services">
+                <ul>
+                    <li>Our Story</li>
+                    <li> Games</li>
+                    <li>Web Games</li>
+                    <li>careers</li>
+                    <li>Support</li>
+                    <li>My Account</li>
+                </ul>
+            </div>
+
+            <div class="f-icon">
+                    <img class="footer-img" src="./footer-icon/facebook.svg" alt="">
+                    <img class="footer-img" src="./footer-icon/twitter.svg" alt="">
+                    <img class="footer-img" src="./footer-icon/youtube.svg" alt="">
+                    <img class="footer-img" src="./footer-icon/linkedin.svg" alt="">
+                    <img class="footer-img" src="./footer-icon/instagram.svg" alt="">
+            </div>
+            <div class="terms-policy">
+                <ul>
+                    <li>Terms and condition</li>
+                    <li>Privacy Policy</li>
+                    <li>Cookie Policy</li>
+                    <li>Privacy Setting</li>
+                </ul>
+            </div>
+           <p class="footer-p">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </section>
     </footer>
 </body>
 </html>
